--- a/stats/templates/stats/addgame.html
+++ b/stats/templates/stats/addgame.html
@@ -19,7 +19,7 @@
       {% for player in player_list %}
       <option value="{{player.slug}}">{{player.name}}</option>
       {% endfor %}
-    </select><label for="team_a_points">Points:</label>
+    </select> <label for="team_a_points">Points:</label>
     <select id="team_a_points" name="team_a_points">
       <option value="0">0</option>
       <option value="1">1</option>
@@ -44,8 +44,7 @@
       {% for player in player_list %}
       <option value="{{player.slug}}">{{player.name}}</option>
       {% endfor %}
-    </select>
-    <label for="team_b_points">Points:</label>
+    </select> <label for="team_b_points">Points:</label>
     <select id="team_b_points" name="team_b_points">
       <option value="0">0</option>
       <option value="1">1</option>
