--- a/stats/templates/base.html
+++ b/stats/templates/base.html
@@ -4,13 +4,16 @@
 <script type="text/javascript" src="/media/jquery-1.6.4.js"></script>
 </head>
 <body>
-<div class="nav container">
-<a href="/games/">Record Games</a>
-<a href="/players/">Players</a>
-<a href="/teams/">Teams</a>
-<a href="/games/singles/">Singles</a>
-<a href="/games/doubles/">Doubles</a>
-<a href="/">Home</a>
+<div class="nav">
+<div class="nav-body">
+<a href="/">
+<img src="/media/logo_foozball-10.png"/></a>
+<div class="nav-links">
+<a href="/games/">Post A Game</a>&nbsp;&nbsp;&nbsp;
+<a href="/games/singles/">Singles</a>&nbsp;&nbsp;&nbsp;
+<a href="/games/doubles/">Doubles</a>&nbsp;&nbsp;&nbsp;
+</div>
+</div>
 </div>
 
 <div class="container">
