--- a/stats/templates/stats/index.html
+++ b/stats/templates/stats/index.html
@@ -1,39 +1,68 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="list">
-<div class="list_padding">
-  <h2> Players </h2>
-  <form method="POST" action="/createplayer/">{% csrf_token %}
-    <label for="name">Add a player</label>
-    <input type="text" name="name" id="name"/>
-  </form>
-  <ul id="players">
-    {% for player in player_list %}
-    <li><a href="{{ player.get_absolute_url }}">{{ player.name }}</a></li>
-    {% endfor %}
-  </ul>
-  <h2> Teams </h2>
-  <form method="POST" action="/createteam/">{% csrf_token %}
-    <label for="team_player_1">First member</label>
-    <select id="team_player_1" name="team_player_1">
-      {% for player in player_list %}
-      <option value="{{ player.slug }}">{{ player.name }}</option>
+  <div class="motto">
+  <span class="motto"> The best <b>free</b> way to kill your productivity. </span>
+  <div/>
+  <div class="index_content">
+    <div class="recent">
+      <div class="box_top">
+	<span class="box_message"><b>Recent happenings...</b></span>
+      </div>
+      <div class="recent_body">
+	{% for game in game_list|slice:":5" %}
+	<div class="game">
+	  <a href="{{ game.get_absolute_url }}">{{ game.player_1.name }} VS {{ game.player_2.name }} </a><br>
+	  {{ game.player_1_points }} - {{ game.player_2_points }}, 
+	  <small>recorded {{ game.date_played }}</small>
+	</div>
+	{% if not forloop.last %} <hr class="gamehr"/> {% endif %}
+	{% endfor %}
+      </div>
+    </div>
+    <div class="index_right">
+      <div class="top_players">
+      <div class="box_top">
+	<span class="box_message"><b>Top 5 Players</b></span>
+      </div>
+	<div class="box_sidebar">
+	  {% for player in player_list|slice:":5" %}      
+	  <div class="sidebar_team">
+	    <div class="sidebar_team_players">
+	      {{forloop.counter}}. 
+	      <a href="{{player.get_absolute_url}}">{{player.name}}</a>
+            </div>
+          <div class="sidebar_team_rating">
+ 	  {{player.rating}}
+          </div>
+	  </div>
+	  <br/><br/>
+	  {% endfor %}
+	  </div>
+      </div>
+      <div class="top_teams">
+      <div class="box_top">
+	<span class="box_message"><b>Top 5 Teams</b></span>
+      </div>
+      <div class="box_sidebar">
+      {% for team in team_list|slice:":5" %}
+      <div class="sidebar_team">
+      <div class="sidebar_team_players">
+      {{forloop.counter}}. 
+      <a href="{{team.get_absolute_url}}">{{team.player_1.name}}<br/>&nbsp;&nbsp;&nbsp;
+	{{team.player_2.name}}</a>
+      </div>
+      <div class="sidebar_team_rating">
+	{{team.rating}}
+      </div>
+      </div>
+      <br/><br/><br/>
       {% endfor %}
-    </select>
-    <label for="team_player_2">Second member</label>
-    <select id="team_player_2" name="team_player_2">
-      {% for player in player_list %}
-      <option value="{{ player.slug }}">{{ player.name }}</option>
-      {% endfor %}
-    </select>
-    <input type="submit" value="Add Team"/>
-  </form>
-  <ul id="teams">
-    {% for team in team_list %}
-    <li><a href="{{team.get_absolute_url}}">{{ team.player_1.name }} - {{ team.player_2.name }}</a></li>
-    {% endfor %}
-  </ul>
+      </div>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
+
 
 {% endblock %}
