--- a/stats/templates/stats/player_detail.html
+++ b/stats/templates/stats/player_detail.html
@@ -1,21 +1,68 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="list">
-<div id="player_detail">
-  <h2><a href="/teams/{{ player.slug }}">{{ player.name }}</a></h2>
-  <h2>Rating: {{ player.rating }}</h2>
-  <div class ="game_detail">
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp; Recently Played Games </h3>
-    <ul>
-      {% for game in game_list %}
-      <li><a href="{{ game.get_absolute_url }}"> 
-	  {{ game.player_1.name }} VERSUS {{ game.player_2.name }}</a><br/>
-	  SCORE: {{ game.player_1_points }} - {{ game.player_2_points }}, 
-	  <small>recorded {{ game.date_played }}</small>
-      </li>
-      {% endfor %}
-    </ul>
+  <div class="motto">
+    <span class="motto"> Player detail:&nbsp;&nbsp; {{player.name}}</span>
   </div>
+<div class="detail_top">
+  <div class="current_rank detail_mini">
+    <div class="box_top">
+      <span class="box_message">Current Rank</span>
+    </div>
+    <div class="current_rank_inner detail_inner">
+      {{rank_num}} of {{player_count}}
+    </div>
+  </div>
+  <div class="current_rating detail_mini">
+    <div class="box_top">
+      <span class="box_message">Current Rating</span>
+    </div>
+    <div class="current_rating_inner detail_inner">
+      {{player.rating}}
+    </div>
+  </div>
+  <div class="win_ratio detail_mini">
+    <div class="box_top">
+      <span class="box_message">Total Wins / Total Games</span>
+    </div>
+      <img src="/media/Crown-08.png"/>
+    <div class="win_ratio_inner detail_inner">
+      {{wins}} / {{total_games}}
+    </div>
+  </div>
+  <div class="loss_ratio detail_mini">
+    <div class="box_top">
+      <span class="box_message">Total Losses / Total Games</span>
+    </div>
+      <img src="/media/LossSymbol-16.png"/>
+    <div class="loss_ratio_inner detail_inner">
+      {{losses}} / {{total_games}}
+    </div>
+  </div>
+  <div class="avg_points">
+    <div class="box_top">
+      <span class="box_message">Points / Game</span>
+    </div>
+    <div class="avg_points_inner detail_inner">
+      {{points_per_game}}
+    </div>
+  </div>
+</div>
+<br/><br/><br/>
+<div class="detail_recent">
+    <div class="box_top">
+      <span class="box_message"><b>Recent Happenings...</b></span>
+    </div>
+    <div class="detail_recent_inner">
+      {% for game in game_list %}
+	<div class="game">
+	  <a href="{{ game.get_absolute_url }}">{{ game.player_1.name }} VS {{ game.player_2.name }} </a><br>
+	  {{ game.player_1_points }} - {{ game.player_2_points }}, 
+	  <small>recorded {{ game.date_played }}</small>
+	</div>
+	{% if not forloop.last %} <hr class="gamehr"/> {% endif %}
+	{% endfor %}
+    </div>
 </div>
 </div>
 {% endblock %}
