--- a/stats/templates/stats/singles_game_list.html
+++ b/stats/templates/stats/singles_game_list.html
@@ -1,13 +1,56 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="list">
-  <h2>Singles Games</h2>
-  {% for game in singles_game_list %}
-  <div class="game">
-  <a href="{{ game.get_absolute_url }}">{{ game.player_1.name }} VS {{ game.player_2.name }} </a><br>
-    {{ game.player_1_points }} - {{ game.player_2_points }}, 
-  <small>recorded {{ game.date_played }}</small>
+  <div class="singles_list_content">
+    <div class="list_spacer">
+    </div>
+    <div class="user_form">
+      <form method="POST" action="/createplayer/">{% csrf_token %}
+	<input name="name" id="name" type="text"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<input type="submit" value="ADD PLAYER"/>
+      </form>
+    </div>
+    <div class="recent">
+      <div class="box_top">
+	<span class="box_message"><b>Recent Singles happenings...</b></span>
+      </div>
+      <div class="recent_body">  
+	{% for game in singles_game_list|slice:":5" %}
+	<div class="game">
+	  <a href="{{ game.get_absolute_url }}">{{ game.player_1.name }} VS {{ game.player_2.name }} </a><br>
+	  {{ game.player_1_points }} - {{ game.player_2_points }}, 
+	  <small>recorded {{ game.date_played }}</small>
+	</div>
+	{% if not forloop.last %} <hr class="gamehr"/> {% endif %}
+	{% endfor %}
+      </div>
+    </div>
+    <div class="index_right">
+      <div class="top_singles">
+	<div class="box_top">
+	  <span class="box_message"><b>All Players</b></span>
+	</div>
+	<div class="top_inner">
+	<div class="box_sidebar">
+	  {% for player in player_list %}      
+	  <div class="sidebar_team">
+	    <div class="sidebar_team_players">
+	      {{forloop.counter}}. 
+	      <a href="{{player.get_absolute_url}}">{{player.name}}</a>
+            </div>
+          <div class="sidebar_team_rating">
+ 	  {{player.rating}}
+          </div>
+	  </div>
+	  <br/><br/><br/>
+	  {% endfor %}
+	  </div>
+	</div>
+	</div>
+	</div>
+      </div>
+    </div>
   </div>
-  {% endfor %}
 </div>
+
 {% endblock %}
