--- a/stats/templates/stats/doubles_game_detail.html
+++ b/stats/templates/stats/doubles_game_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="list">
-<div class="both_teams">
+<div class="both_teams round">
 <div class="box_top">
   <span class="box_message"><b>Game Detail</b></span>
 </div>
