--- a/stats/templates/stats/doubles_game_list.html
+++ b/stats/templates/stats/doubles_game_list.html
@@ -4,7 +4,7 @@
   <div class="doubles_list_content">
   <div class="list_spacer">
   </div>
-    <div class="recent">
+    <div class="recent round">
       <div class="box_top">
 	<span class="box_message"><b>Recent Doubles happenings...</b></span>
       </div>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="index_right">
-      <div class="top_doubles">
+      <div class="top_doubles round">
       <div class="box_top">
 	<span class="box_message"><b>All Teams</b></span>
       </div>
