--- a/stats/templates/stats/singles_game_list.html
+++ b/stats/templates/stats/singles_game_list.html
@@ -10,7 +10,7 @@
 	<input type="submit" value="ADD PLAYER"/>
       </form>
     </div>
-    <div class="recent">
+    <div class="recent round">
       <div class="box_top">
 	<span class="box_message"><b>Recent Singles happenings...</b></span>
       </div>
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="index_right">
-      <div class="top_singles">
+      <div class="top_singles round">
 	<div class="box_top">
 	  <span class="box_message"><b>All Players</b></span>
 	</div>
@@ -45,7 +45,7 @@
 	  <br/><br/><br/>
 	  {% endfor %}
 	  </div>
-	</div>
+	</div>	
 	</div>
 	</div>
       </div>
