--- a/stats/templates/base.html
+++ b/stats/templates/base.html
@@ -2,6 +2,7 @@
 <title>{% block title %}MyEDU Foosball Tracker{% endblock %}</title>
 <link rel="stylesheet" href="/media/style.css"/>
 <script type="text/javascript" src="/media/jquery-1.6.4.js"></script>
+<script type="text/javascript" src="/media/jquery.corner.js"></script>
 </head>
 <body>
 <div class="nav">
@@ -21,5 +22,6 @@
 {% block content %}{% endblock %}
 </div>
 </div>
+<script type="text/javascript" src="/media/roundCorners.js"></script>
 </body>
 </html>
