--- a/stats/templates/stats/player_detail.html
+++ b/stats/templates/stats/player_detail.html
@@ -5,7 +5,7 @@
     <span class="motto"> Player detail:&nbsp;&nbsp; {{player.name}}</span>
   </div>
 <div class="detail_top">
-  <div class="current_rank detail_mini">
+  <div class="current_rank detail_mini round">
     <div class="box_top">
       <span class="box_message">Current Rank</span>
     </div>
@@ -13,7 +13,7 @@
       {{rank_num}} of {{player_count}}
     </div>
   </div>
-  <div class="current_rating detail_mini">
+  <div class="current_rating detail_mini round">
     <div class="box_top">
       <span class="box_message">Current Rating</span>
     </div>
@@ -21,7 +21,7 @@
       {{player.rating}}
     </div>
   </div>
-  <div class="win_ratio detail_mini">
+  <div class="win_ratio detail_mini round">
     <div class="box_top">
       <span class="box_message">Total Wins / Total Games</span>
     </div>
@@ -30,7 +30,7 @@
       {{wins}} / {{total_games}}
     </div>
   </div>
-  <div class="loss_ratio detail_mini">
+  <div class="loss_ratio detail_mini round">
     <div class="box_top">
       <span class="box_message">Total Losses / Total Games</span>
     </div>
@@ -39,7 +39,7 @@
       {{losses}} / {{total_games}}
     </div>
   </div>
-  <div class="avg_points">
+  <div class="avg_points round">
     <div class="box_top">
       <span class="box_message">Points / Game</span>
     </div>
@@ -49,7 +49,7 @@
   </div>
 </div>
 <br/>
-<div class="detail_recent">
+<div class="detail_recent round">
     <div class="box_top">
       <span class="box_message"><b>Recent Happenings...</b></span>
     </div>
